--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,10 +23,19 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.2
+  provider: ^2.0.1
+  get_it: any
+  http: ^0.12.0+2
+  json_annotation: ^2.4.0
+
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
+
+  build_runner: ^1.5.0 
+  json_serializable: ^3.0.0       
+   
 
 
 # For information on the generic Dart part of this file, see the
