--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,6 +27,8 @@ dependencies:
   get_it: any
   http: ^0.12.0+2
   json_annotation: ^2.4.0
+  shared_preferences: ^0.5.3
+
 
 
 dev_dependencies:
@@ -52,6 +54,7 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
    - assets/images/mediumH.jpg
+   - assets/images/hwa_logo.jpg
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
