--- a/android/build.gradle
+++ b/android/build.gradle
@@ -6,6 +6,10 @@ buildscript {
 
     dependencies {
         classpath 'com.android.tools.build:gradle:3.2.1'
+          // Add the google services classpath
+  classpath 'com.google.gms:google-services:4.2.0'
+  // Add fabric classpath
+  classpath 'io.fabric.tools:gradle:1.26.1'
     }
 }
 
