--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,6 +28,9 @@ dependencies:
   http: ^0.12.0+2
   json_annotation: ^2.4.0
   shared_preferences: ^0.5.3
+  reflectable: any
+  matcher: 0.12.5
+  build_runner: any
 
 
 
@@ -35,7 +38,6 @@ dev_dependencies:
   flutter_test:
     sdk: flutter
 
-  build_runner: ^1.5.0 
   json_serializable: ^3.0.0       
    
 
